工数計算ボタン押下時のエラー修正
