# src/api/src/models/calcTestApplication200ResponseDisplayedProcessRatios.ts
@@ -1,0 +1,72 @@
+/**
+ * 見積算出システム API
+ * ...
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+/**
+* 工程別比率表示用
+*/
+export class CalcTestApplication200ResponseDisplayedProcessRatios {
+    /**
+    * 基本設計
+    */
+    'basicDesign'?: number;
+    /**
+    * 詳細設計
+    */
+    'detailedDesign'?: number;
+    /**
+    * 製造
+    */
+    'implementation'?: number;
+    /**
+    * 結合テスト
+    */
+    'integrationTest'?: number;
+    /**
+    * 総合テスト
+    */
+    'systemTest'?: number;
+
+    static discriminator: string | undefined = undefined;
+
+    static attributeTypeMap: Array<{name: string, baseName: string, type: string}> = [
+        {
+            "name": "basicDesign",
+            "baseName": "basicDesign",
+            "type": "number"
+        },
+        {
+            "name": "detailedDesign",
+            "baseName": "detailedDesign",
+            "type": "number"
+        },
+        {
+            "name": "implementation",
+            "baseName": "implementation",
+            "type": "number"
+        },
+        {
+            "name": "integrationTest",
+            "baseName": "integrationTest",
+            "type": "number"
+        },
+        {
+            "name": "systemTest",
+            "baseName": "systemTest",
+            "type": "number"
+        }    ];
+
+    static getAttributeTypeMap() {
+        return CalcTestApplication200ResponseDisplayedProcessRatios.attributeTypeMap;
+    }
+}
+
